[package]
name = "astar"
version = "0.1.0"
edition = "2021"

[dependencies]
priority-queue = "1.0.2"
rand = { version = "0.8", features = ["small_rng"] }
zwohash = { version = "0.1.2", default-features = false }
structopt = { version = "0.3", default-features = false }
anyhow = "1"
idek = { git = "https://github.com/Masterchef365/idek.git", rev = "6a5678f" }

[profile.release]
debug = true
